welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: Unit does not take parameters
	{recule(6);gauche();avance();droite();}
        ^